--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
 }
 
 .banner {
-    background:brown
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background:brown;
+    flex-direction: column;
+    
 }
 
 #text {
@@ -20,6 +27,7 @@ section {
 
 .icons{
     color: white;
+    display: flex;
 }
 
 .addict{
